examples/test/testpolicy14694.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14694
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key36: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value40
          key1: value48
      podSelector:
        matchLabels:
          key0: value25
          key46: value17
          key34: value6
